# TargetBot

./: .gitignore  README.md
arduino/: README.md
arduino/trigger/: trigger.ino
audio_input/: README.md  package.xml  setup.cfg  setup.py
audio_input/audio_input/: user_input.py
control/: README.md  package.xml  setup.py
control/control/: control.py
control/launch/: shoot_pins.launch.xml
docs_output/audio_input/: .buildinfo  audio_input.html  audio_input.user_input.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_output/control/: .buildinfo  control.control.html  control.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_output/gun_trajectory/: .buildinfo  genindex.html  gun_trajectory.html  gun_trajectory.move_gun.html  gun_trajectory.moveit_api.html  gun_trajectory.quaternion.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_output/image_yolo/: .buildinfo  genindex.html  image_yolo.html  image_yolo.ros_yolo.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_output/trigger/: .buildinfo  genindex.html  index.html  (+7 more)
gun_trajectory/: README.md  package.xml  setup.cfg  setup.py
image_yolo/: README.md
trajectory_interfaces/: CMakeLists.txt  package.xml
trajectory_interfaces/srv/: Target.srv  TargetScanRequest.srv  UserInput.srv
trigger/: README.md  package.xml  setup.cfg  setup.py
trigger_interfaces/: CMakeLists.txt  package.xml
(+357 files in other folders)
